force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/Sfdc_Disti_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Sfdc Disti Mapping</label>
    <pluralLabel>Sfdc Disti Mappings</pluralLabel>
</CustomObject>