force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Additional_Terms_Agreement_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Agreement_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Terms Agreement Confirmed</label>
    <type>Checkbox</type>
</CustomField>