force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/city_index__c.field-meta.xml
<CustomField>
    <fullName>city_index__c</fullName>
    <label>city index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>