force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Country_Index__c.field-meta.xml
<CustomField>
    <fullName>Country_Index__c</fullName>
    <label>Country Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>