force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Default_Country__c.field-meta.xml
<CustomField>
    <fullName>Default_Country__c</fullName>
    <label>Default Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>