force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Disable_Distii__c.field-meta.xml
<CustomField>
    <fullName>Disable_Distii__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Distii</label>
    <type>Checkbox</type>
</CustomField>