force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Distributor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Email_Address__c</fullName>
    <label>Distributor Email Address</label>
    <type>Email</type>
</CustomField>