force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>