force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/PO_Disti_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Disti_Name__c</fullName>
    <label>PO Disti Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>