force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Po_Disti_Type__c.field-meta.xml
<CustomField>
    <fullName>Po_Disti_Type__c</fullName>
    <label>Po Disti Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>