force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Po_Integration__c.field-meta.xml
<CustomField>
    <fullName>Po_Integration__c</fullName>
    <label>Po Integration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>