force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Price_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Price_Mapping__c</fullName>
    <label>Price Mapping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>