force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Sfdc_Id__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_Id__c</fullName>
    <label>Sfdc Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>