force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/State_Regex__c.field-meta.xml
<CustomField>
    <fullName>State_Regex__c</fullName>
    <label>State Regex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>