force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Zipcode_Char_Length__c.field-meta.xml
<CustomField>
    <fullName>Zipcode_Char_Length__c</fullName>
    <label>Zipcode Char Length</label>
    <length>10</length>
    <type>Text</type>
</CustomField>