force-app/main/default/objects/Sfdc_Disti_Mapping__mdt/fields/Zipcode_Index__c.field-meta.xml
<CustomField>
    <fullName>Zipcode_Index__c</fullName>
    <label>Zipcode Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>